# Textcodify

./: .gitignore  Readme.md  meson.build
data/: dev.hillman.textcodify.appdata.xml  dev.hillman.textcodify.desktop  textcodify.appdata.xml  textcodify.desktop
src/: annocontroller.vala  annoview.vala  app.vala  controller.vala  doctools.vala  docview.vala  header.vala  pageanalysis.vala  storagecontroller.vala  viewframe.vala  viewwindow.vala
